# assembler-98-raiz

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.docker.md  README.md  basic-algorithm  dep2.elf98  dependencia_1.elf98  dependencia_2.elf98  dependency.elf98  exemplo_ligador.elf98  fib.elf98  highest.asm  linked_program.elf98  macros_example.asm  macros_example_expected.asm  macros_fibonnaci.asm  macrosfibon.asm  macrosout.asm  output.elf98  program  program.asm  program.elf98  real_example.asm  sdadsadsadasd.elf98  syntax  test.elf98  unix-build.sh
examples/: discriminante.asm  exemplo_ligador.asm  exemplo_ligador_dependencia.asm  exemplo_ligador_dependencia_1.asm  exemplo_ligador_dependencia_2.asm  fibonacci.asm  highest_value_in_array.asm  macros_example.asm  printvalues.asm  test.asm
extra/: a9r.vim
glade_files/: #ui.glade#  testing.glade~  ui.glade  ui.glade~
include/: architecture.h  data_structures.h  example.h  global.h  helper.h  ligador.h  macro_processor.h  maquina.h  montador.h  montador_types.h  parser.h  program.h  screens.h  stack.h  types.h
specifications/: ligador  maquina  montador  processador_de_macros
src/: architecture.c  data_structures.c  example.c  global.c  helper.c  ligador.c  macro_processor.c  main.c  maquina.c  montador.c  parser.c  program.c  screens.c  stack.c
styles/: global.css
tarefas/: montador.md
tests/: CMakeLists.txt  fibonnaci.asm  unix-run-tests.sh
tests/montador/: tests.c
tests/processador_macros/: tests.c
